bug (margins): add extra margin from top and bottom[finishes #167138304]

--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -106,7 +106,7 @@ a {
   } 
 main.container
 {
-    margin-top: 6rem;
+    margin-top: 5rem;
 }
 .wrapper {
   display: flex;  
